----------------------------------------------------------------
-- wren gayle romano <wren@community.haskell.org>   ~ 2015.05.30
----------------------------------------------------------------

-- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
-- and source-repository:.
Cabal-Version:  >= 1.6
-- We need a custom build in order to define __HADDOCK__
Build-Type:     Custom

Name:           exact-combinatorics
Version:        0.2.0.8
Stability:      experimental
Homepage:       http://code.haskell.org/~wren/
Author:         wren gayle romano
Maintainer:     wren@community.haskell.org
Copyright:      Copyright (c) 2011--2015 wren gayle romano
License:        BSD3
License-File:   LICENSE

Category:       Statistics, Math
Synopsis:       Efficient exact computation of combinatoric functions.
Description:    Efficient exact computation of combinatoric functions.

Tested-With:
    GHC ==6.12.1, GHC ==7.6.1, GHC ==7.8.0
Extra-source-files:
    README, CHANGELOG
Source-Repository head
    Type:     darcs
    Location: http://community.haskell.org/~wren/exact-combinatorics

----------------------------------------------------------------
Library
    Hs-Source-Dirs:  src
    Exposed-Modules: Math.Combinatorics.Exact.Primes
                   , Math.Combinatorics.Exact.Factorial
                   , Math.Combinatorics.Exact.Binomial
    Other-Modules:   Util.Stream
    Build-Depends:   base >= 4 && < 5
                   , hs-functors >= 0.1.4 && < 0.2
    Ghc-Options:     -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                     -Wincomplete-record-updates -Wincomplete-uni-patterns
                     -Werror=incomplete-patterns
                     -Werror=incomplete-uni-patterns
                     -Werror=incomplete-record-updates
                     -Werror=missing-fields
                     -Werror=missing-methods

----------------------------------------------------------------
Custom-Setup
    Setup-Depends: Cabal, base

----------------------------------------------------------------
----------------------------------------------------------- fin.
